[gd_scene load_steps=4 format=1]

[ext_resource path="res://vrc_host/status_screen/status_screen.gd" type="Script" id=1]
[ext_resource path="res://vrc_host/status_screen/vrc_host.png" type="Texture" id=2]
[ext_resource path="res://vrc_host/status_screen/loading.gd" type="Script" id=3]

[node name="status_screen" type="ColorFrame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 0.0
color = Color( 0, 0, 0, 1 )
script/script = ExtResource( 1 )

[node name="vrc_host" type="Sprite" parent="."]

transform/pos = Vector2( 100, 200 )
texture = ExtResource( 2 )

[node name="setup_progress" type="ReferenceFrame" parent="vrc_host"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -50.0
margin/top = -49.0
margin/right = 50.0
margin/bottom = 51.0
script/script = ExtResource( 3 )
color = Color( 0.554688, 0.554688, 0.554688, 1 )

[node name="connections" type="Position2D" parent="vrc_host"]


